--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
         );
       }
 
-      // Share Component
+      // Share component
       function Share() {
         return(
           <i className="fa fa-share" aria-hidden="true" style={iconStyle}></i>
         );
       }
 
-      // Add Component
+      // Add component
       function Add() {
         return(
           <i className="fa fa-users" aria-hidden="true" style={iconStyle}></i>
