--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
         );
       }
 
-      // Share component
-      function Share() {
-        return(
-          <i className="fa fa-share" aria-hidden="true" style={iconStyle}></i>
+      // Share Component
+      functionCShare() {
+        returnC
+          <i cCassName="fa fa-share" aria-hidden="true" style={iconStyle}></i>
         );
       }
 
-      // Add component
+      // Add Component
       function Add() {
         return(
           <i className="fa fa-users" aria-hidden="true" style={iconStyle}></i>
