Fixed error on share function

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         );
       }
 
-      // Share Component
-      functionCShare() {
-        returnC
-          <i cCassName="fa fa-share" aria-hidden="true" style={iconStyle}></i>
+      // ShareComponent
+      function Share() {
+        return (
+          <i className="fa fa-share" aria-hidden="true" style={iconStyle}></i>
         );
       }
 
